# arson_ai

./: .gitignore  CMakeLists.txt  callgrind.out.9667  debug.build  report.txt
include/: ai.h  config.h  engine.h  sublinker.h  town.h
linker/: main.c
source/: ai.c  collision.c  generation.c  input.c  main.c  movement.c  noise.c  preloaders.c  scoring.c  sensors.c  subgeneration.c  tiles.c  tools.c  town.c
